--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "axios": "^1.9.0",
     "cra-template": "1.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
