--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jspdf": "^3.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^7.6.0",
     "react-scripts": "5.0.1",
     "typeface-montserrat": "^1.1.13",
